last edit update for today. Fixed issues with icons, updated resume and htlm/css store. Also text aligned most text blocks to left, interesting bugs still to deal with but it looks much better.

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -49,8 +49,8 @@ body {
 .scontent {
   position: absolute;
   height: 80%;
-  width: 90%;
-  padding: 10% 5%;
+  width: 100%;
+  padding: 17% 10%;
 
 }
 
